syntax = "proto3";

package forum;

option go_package = "backend/proto/forum";

service ForumService {
  rpc GetTopic (GetTopicRequest) returns (Topic) {}
  rpc GetTopics (GetTopicsRequest) returns (GetTopicsResponse) {}
  rpc CreateTopic (CreateTopicRequest) returns (Topic) {}
  rpc UpdateTopic (UpdateTopicRequest) returns (Topic) {}
  rpc DeleteTopic (DeleteTopicRequest) returns (DeleteTopicResponse) {}
}

message Topic {
  int64 id = 1;
  string title = 2;
  string content = 3;
  int64 author_id = 4;
  int64 category_id = 5;
  int32 views = 6;
  string created_at = 7;
  string updated_at = 8;
}

message GetTopicRequest {
  int64 id = 1;
}

message GetTopicsRequest {
  int32 page = 1;
  int32 limit = 2;
  int64 category_id = 3;
}

message GetTopicsResponse {
  repeated Topic topics = 1;
  int32 total = 2;
}

message CreateTopicRequest {
  string title = 1;
  string content = 2;
  int64 author_id = 3;
  int64 category_id = 4;
}

message UpdateTopicRequest {
  int64 id = 1;
  string title = 2;
  string content = 3;
  int64 category_id = 4;
}

message DeleteTopicRequest {
  int64 id = 1;
}

message DeleteTopicResponse {
  bool success = 1;
} 